k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-task
  labels:
    app: demo-task
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-task
  template:
    metadata:
      labels:
        app: demo-task
    spec:
      containers:
      - name: demo-task-container
        image: 124355648369.dkr.ecr.ap-south-1.amazonaws.com/demo-task-repo:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-task-service
spec:
  type: NodePort
  selector:
    app: demo-task
  ports:
    - port: 5000
